# brainfuck-shortest

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: main.rs
